--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
-div class=profile-card
-    img src=user-photo.jpg alt=User Photo class=profile-photo
-    h2User Nameh2
-    pBio A little about the user.p
-    button class=like-btnLikebutton
-    button class=dislike-btnDislikebutton
-div
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Page Title</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file if you have one -->
+</head>
+<body>
+    <div class="profile-card">
+        <img src="user-photo.jpg" alt="User Photo" class="profile-photo">
+        <h2>User Name</h2>
+        <p>Bio: A little about the user.</p>
+        <button class="like-btn">Like</button>
+        <button class="dislike-btn">Dislike</button>
+    </div>
+</body>
+</html>
